<resources>
    <string name="app_name">PRA1Moviles</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TDDM</string>
    <string name="nav_header_subsubtitle">App compra/venta productos</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="menu_home">Nuevo Producto</string>
    <string name="menu_gallery">Lista Productos</string>
    <string name="menu_slideshow">Mapa</string>
    <string name="menu_send">Cerrar Sesión</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <string name="nombre_label_mayus">NOMBRE</string>
    <string name="nombre_label">Nombre</string>
    <string name="descripcion_label_mayus">DESCRIPCIÓN</string>
    <string name="descripcion_label">Descripción</string>
    <string name="precio_label_mayus">PRECIO</string>
    <string name="precio_label">Precio</string>
    <string name="foto_label_mayus">IMAGEN</string>
    <string name="dofoto_label_mayus">HACER FOTO</string>
    <string name="add_product_label_mayus">AÑADIR PRODUCTO</string>

    <string name="confirm_dialog_yes">Sí</string>
    <string name="confirm_dialog_no">No</string>
</resources>
