<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ilm.pra2moviles.drawer.producto.NewProductFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ilm.pra2moviles.drawer.gallery.ProductListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_main_product_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ilm.pra2moviles.drawer.map.MapaFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.ilm.pra2moviles.drawer.session.SignOutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>